# backend-go/internal/docs/swagger.yaml
@@ -51,81 +51,6 @@ definitions:
     required:
     - query
     type: object
-  snatcher_backendv2_internal_models.CatalogProduct:
-    properties:
-      brand:
-        $ref: '#/definitions/snatcher_backendv2_internal_models.NullString'
-      canonical_name:
-        type: string
-      created_at:
-        type: string
-      id:
-        type: integer
-      image_url:
-        $ref: '#/definitions/snatcher_backendv2_internal_models.NullString'
-      lowest_price:
-        $ref: '#/definitions/snatcher_backendv2_internal_models.NullFloat64'
-      lowest_price_source:
-        $ref: '#/definitions/snatcher_backendv2_internal_models.NullString'
-      lowest_price_url:
-        $ref: '#/definitions/snatcher_backendv2_internal_models.NullString'
-      tags:
-        type: string
-      updated_at:
-        type: string
-      weight:
-        $ref: '#/definitions/snatcher_backendv2_internal_models.NullString'
-    type: object
-  snatcher_backendv2_internal_models.CatalogVariant:
-    properties:
-      catalog_product_id:
-        type: integer
-      first_seen_at:
-        type: string
-      id:
-        type: integer
-      image_url:
-        $ref: '#/definitions/snatcher_backendv2_internal_models.NullString'
-      last_seen_at:
-        type: string
-      price:
-        type: number
-      short_id:
-        $ref: '#/definitions/snatcher_backendv2_internal_models.NullString'
-      source:
-        type: string
-      title:
-        type: string
-      url:
-        type: string
-      variant_label:
-        $ref: '#/definitions/snatcher_backendv2_internal_models.NullString'
-    type: object
-  snatcher_backendv2_internal_models.Channel:
-    properties:
-      active:
-        type: boolean
-      created_at:
-        type: string
-      description:
-        type: string
-      digest_max_items:
-        type: integer
-      digest_mode:
-        type: boolean
-      id:
-        type: integer
-      message_template:
-        $ref: '#/definitions/snatcher_backendv2_internal_models.NullString'
-      name:
-        type: string
-      send_end_hour:
-        type: integer
-      send_start_hour:
-        type: integer
-      slug:
-        $ref: '#/definitions/snatcher_backendv2_internal_models.NullString'
-    type: object
   snatcher_backendv2_internal_models.NullFloat64:
     properties:
       float64:
@@ -282,7 +207,7 @@ paths:
             properties:
               items:
                 items:
-                  $ref: '#/definitions/snatcher_backendv2_internal_models.CatalogProduct'
+                  type: object
                 type: array
               limit:
                 type: integer
@@ -320,10 +245,10 @@ paths:
           schema:
             properties:
               product:
-                $ref: '#/definitions/snatcher_backendv2_internal_models.CatalogProduct'
+                type: object
               variants:
                 items:
-                  $ref: '#/definitions/snatcher_backendv2_internal_models.CatalogVariant'
+                  type: object
                 type: array
             type: object
         "400":
@@ -364,7 +289,7 @@ paths:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/snatcher_backendv2_internal_models.Channel'
+            type: object
         "400":
           description: Bad Request
           schema:
